<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.muhammadazri.githubuserfinalproject.model.GithubUser" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.login}"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/detail_avatar"
                app:layout_constraintEnd_toEndOf="@+id/detail_avatar"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/exp_username" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_person"
                app:avatar='@{data.avatar_url ?? ""}'
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_username" />

            <TextView
                android:id="@+id/detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.type}"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_name"
                tools:text="@string/exp_type" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.name??data.login}"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_avatar"
                tools:text="@string/exp_fullname" />

            <TextView
                android:id="@+id/detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.location!=null? data.location : @string/location_not_found}"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_type"
                tools:text="@string/exp_location" />

            <TextView
                android:id="@+id/detail_txt_repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/repository"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/detail_txt_followers"
                app:layout_constraintStart_toEndOf="@id/detail_avatar"
                app:layout_constraintTop_toBottomOf="@id/detail_repos" />

            <TextView
                android:id="@+id/detail_repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{String.valueOf(data.public_repos)}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_repos"
                app:layout_constraintStart_toStartOf="@id/detail_txt_repos"
                app:layout_constraintTop_toTopOf="@id/detail_avatar"
                tools:text="@string/exp_repos" />

            <TextView
                android:id="@+id/detail_txt_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/followers"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/detail_txt_following"
                app:layout_constraintStart_toEndOf="@id/detail_txt_repos"
                app:layout_constraintTop_toBottomOf="@id/detail_followers" />

            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@{String.valueOf(data.followers)}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_followers"
                app:layout_constraintStart_toStartOf="@id/detail_txt_followers"
                app:layout_constraintTop_toTopOf="@id/detail_repos"
                tools:text="@string/exp_followers" />

            <TextView
                android:id="@+id/detail_txt_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/following"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_txt_followers"
                app:layout_constraintTop_toBottomOf="@id/detail_following" />

            <TextView
                android:id="@+id/detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(data.following)}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_following"
                app:layout_constraintStart_toStartOf="@id/detail_txt_following"
                app:layout_constraintTop_toTopOf="@id/detail_followers"
                tools:text="@string/exp_following" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_fav_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>